Finished employee View except for some vertical alignment issues with the header. Base also changed slightly

--- a/src/Safetrack/tracker/static/css/style.css
+++ b/src/Safetrack/tracker/static/css/style.css
@@ -1,17 +1,34 @@
 p {
-	color: black;
     font-size: 12px;
+    color: #EFEFFB;
 }
 
 h1 {
+	color: #EFEFFB;
+}
 
+h2 {
+	color: #EFEFFB;
+}
+
+tr {
+	color: #EFEFFB;
+	text-align: center;
+}
+
+.chartSwitch {
+	color: #EFEFFB;
+	text-align: center;
+}
+
+.button{
+	float: right;
+	color: #EFEFFB;
 }
 
 #headerSection {
 	height: 20%
-
 }
-
 
 #leftSide {
     width: 25%;
@@ -20,11 +37,9 @@ h1 {
 }
 
 #leftSide #stats {
-
 }
 
 #leftSide #profile {
-
 }
 
 #rightSide {
@@ -32,6 +47,7 @@ h1 {
     height: 50%;
     float: right;    
 }
+
 #rightSide #status{
     /*
     This needs to be changed.
@@ -50,9 +66,7 @@ h1 {
     text-align: right;
 }
 
-.button{
-	float: right;
-}
+
 
 #titleImage {
 	display: block;
@@ -64,4 +78,35 @@ h1 {
 	margin-left: 0;
 }
 
+/*#status #warning {
+	color:#EFEFFB;
+} */
 
+#loggedInText #userType {
+	display: block;
+	float: right;
+	color: #EFEFFB;
+}
+
+/* #status #VariableTable {
+	color: #EFEFFB;
+	text-align: center;
+} */
+
+#stats {
+	color: #EFEFFB;
+}
+
+#status {
+	color: #EFEFFB;
+	text-align: center;
+}
+
+li {
+	list-style-type: none;
+}
+
+table{
+	margin-left: auto;
+	margin-right: auto;
+}
